[project]
name = "qupboard-graphql"
version = "0.1.0"
description = "Proof of concept to show how hardware models may be server via graphQL"
authors = [
    {name = "Jonathan Lucas",email = "jlucas@oqc.tech"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14.0"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi (>=0.131.0,<1.0.0)",
    "strawberry-graphql[fastapi] (>=0.307.1,<1.0.0)",
    "semver (>=3.0.4,<4.0.0)",
    "uvicorn (>=0.41.0,<1.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pydantic-extra-types (>=2.11.0,<3.0.0)",
    "piny (>=1.1.0,<2.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "compiler-config (>=0.2.0,<0.3.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "numpydantic (>=1.8.0,<2.0.0)",
    "strawberry-sqlalchemy-mapper (>=0.8.0,<0.9.0)"
]
[dependency-groups]
dev = [
    "pytest >=9.0.2",
    "pytest-xdist >=3.8.0",
    "pytest-cov >=7.0.0",
    "pre-commit >=4.5.1",
    "ruff >=0.15.2",
    "httpx (>=0.28.1,<0.29.0)",
]
[project.scripts]
qupboard = "qupboard_graphql.main:main"
[tool.poetry]
packages = [{include = "qupboard_graphql", from = "src"}]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
